day 3 bootstrap case
Signed-off-by: Jason Ai <aizhaoyu@163.com>

--- a/2.html
+++ b/2.html
@@ -25,7 +25,9 @@
 		#footer{
 			background-color:black;
     		color:white;
-    		clear:both;
+    		clear:both;		/*clear清除，both全部，连起来就是清除全部样式，不过
+    						这个样式主要是用于对多个div浮动的清除，
+    						如float:left,如果不清除，很容易对下面的div造成显示错位*/
     		text-align:center;
     		padding:5px; 
 		}
